--- a/Santander_Trasaction_Competition_Kaggle.ipynb
+++ b/Santander_Trasaction_Competition_Kaggle.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,19 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train=pd.read_csv(\"Data/train.csv\")\n",
-    "test=pd.read_csv(\"Data/test.csv\")\n",
+    "train=pd.read_csv(\"C:/Users/Sriram Rachamadugu/Documents/GitHub/Santander-Customer-Transaction-Prediction/Data/train.csv\")\n",
+    "test=pd.read_csv(\"C:/Users/Sriram Rachamadugu/Documents/GitHub/Santander-Customer-Transaction-Prediction/Data/test.csv\")\n",
     "features = [c for c in train.columns if c not in ['ID_code', 'target']]\n",
     "target = train['target']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,52 +336,322 @@
        "      <td>16.2375</td>\n",
        "      <td>14.2514</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>train_10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0702</td>\n",
+       "      <td>-0.5447</td>\n",
+       "      <td>9.5900</td>\n",
+       "      <td>4.2987</td>\n",
+       "      <td>12.3910</td>\n",
+       "      <td>-18.8687</td>\n",
+       "      <td>6.0382</td>\n",
+       "      <td>14.3797</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.2780</td>\n",
+       "      <td>8.0819</td>\n",
+       "      <td>0.2139</td>\n",
+       "      <td>-0.0761</td>\n",
+       "      <td>14.9585</td>\n",
+       "      <td>-1.2160</td>\n",
+       "      <td>6.6576</td>\n",
+       "      <td>9.2553</td>\n",
+       "      <td>14.2914</td>\n",
+       "      <td>-7.6652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>train_11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.7188</td>\n",
+       "      <td>-7.9750</td>\n",
+       "      <td>10.3757</td>\n",
+       "      <td>9.0101</td>\n",
+       "      <td>12.8570</td>\n",
+       "      <td>-12.0852</td>\n",
+       "      <td>5.6464</td>\n",
+       "      <td>11.8370</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.8901</td>\n",
+       "      <td>2.6559</td>\n",
+       "      <td>-0.0503</td>\n",
+       "      <td>5.5946</td>\n",
+       "      <td>13.6152</td>\n",
+       "      <td>2.4058</td>\n",
+       "      <td>-1.7183</td>\n",
+       "      <td>9.6745</td>\n",
+       "      <td>16.7498</td>\n",
+       "      <td>-3.9728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>train_12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.7671</td>\n",
+       "      <td>-4.6154</td>\n",
+       "      <td>9.7242</td>\n",
+       "      <td>7.4242</td>\n",
+       "      <td>9.0254</td>\n",
+       "      <td>1.4247</td>\n",
+       "      <td>6.2815</td>\n",
+       "      <td>12.3143</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3782</td>\n",
+       "      <td>7.4382</td>\n",
+       "      <td>0.0854</td>\n",
+       "      <td>1.3444</td>\n",
+       "      <td>17.2439</td>\n",
+       "      <td>-0.0798</td>\n",
+       "      <td>5.7389</td>\n",
+       "      <td>8.4897</td>\n",
+       "      <td>17.0938</td>\n",
+       "      <td>4.6106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>train_13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.3699</td>\n",
+       "      <td>1.5934</td>\n",
+       "      <td>16.7395</td>\n",
+       "      <td>7.3330</td>\n",
+       "      <td>12.1450</td>\n",
+       "      <td>5.9004</td>\n",
+       "      <td>4.8222</td>\n",
+       "      <td>20.9729</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.4002</td>\n",
+       "      <td>7.4031</td>\n",
+       "      <td>4.3989</td>\n",
+       "      <td>4.0978</td>\n",
+       "      <td>17.3638</td>\n",
+       "      <td>-1.3022</td>\n",
+       "      <td>9.6846</td>\n",
+       "      <td>9.0419</td>\n",
+       "      <td>15.6064</td>\n",
+       "      <td>-10.8529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>train_14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.8080</td>\n",
+       "      <td>5.0514</td>\n",
+       "      <td>17.2611</td>\n",
+       "      <td>8.5120</td>\n",
+       "      <td>12.8517</td>\n",
+       "      <td>-9.1622</td>\n",
+       "      <td>5.7327</td>\n",
+       "      <td>21.0517</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0740</td>\n",
+       "      <td>8.3220</td>\n",
+       "      <td>3.2619</td>\n",
+       "      <td>1.6738</td>\n",
+       "      <td>17.4797</td>\n",
+       "      <td>-0.0257</td>\n",
+       "      <td>-3.5323</td>\n",
+       "      <td>9.3439</td>\n",
+       "      <td>24.4479</td>\n",
+       "      <td>-5.1110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>train_15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.9416</td>\n",
+       "      <td>2.6562</td>\n",
+       "      <td>13.3633</td>\n",
+       "      <td>6.8895</td>\n",
+       "      <td>12.2806</td>\n",
+       "      <td>-16.1620</td>\n",
+       "      <td>5.6979</td>\n",
+       "      <td>14.4573</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-3.4195</td>\n",
+       "      <td>0.8829</td>\n",
+       "      <td>-1.9859</td>\n",
+       "      <td>3.9905</td>\n",
+       "      <td>22.4647</td>\n",
+       "      <td>0.5129</td>\n",
+       "      <td>6.5273</td>\n",
+       "      <td>8.2899</td>\n",
+       "      <td>12.9116</td>\n",
+       "      <td>-4.9182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>train_16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0615</td>\n",
+       "      <td>0.2689</td>\n",
+       "      <td>15.1325</td>\n",
+       "      <td>3.6587</td>\n",
+       "      <td>13.5276</td>\n",
+       "      <td>-6.5477</td>\n",
+       "      <td>5.2757</td>\n",
+       "      <td>9.8710</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.2717</td>\n",
+       "      <td>7.2854</td>\n",
+       "      <td>0.5670</td>\n",
+       "      <td>8.1822</td>\n",
+       "      <td>19.5616</td>\n",
+       "      <td>0.4365</td>\n",
+       "      <td>-3.4975</td>\n",
+       "      <td>8.6367</td>\n",
+       "      <td>20.2548</td>\n",
+       "      <td>11.1524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>train_17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.4199</td>\n",
+       "      <td>-1.8128</td>\n",
+       "      <td>8.1202</td>\n",
+       "      <td>5.3955</td>\n",
+       "      <td>9.7184</td>\n",
+       "      <td>-17.8390</td>\n",
+       "      <td>4.0959</td>\n",
+       "      <td>15.2860</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.4363</td>\n",
+       "      <td>11.3072</td>\n",
+       "      <td>3.7903</td>\n",
+       "      <td>0.0290</td>\n",
+       "      <td>16.2954</td>\n",
+       "      <td>0.1470</td>\n",
+       "      <td>8.9603</td>\n",
+       "      <td>9.4560</td>\n",
+       "      <td>19.4505</td>\n",
+       "      <td>-5.2407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>train_18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.8750</td>\n",
+       "      <td>1.2646</td>\n",
+       "      <td>11.9190</td>\n",
+       "      <td>8.4650</td>\n",
+       "      <td>10.7203</td>\n",
+       "      <td>-0.6707</td>\n",
+       "      <td>5.6103</td>\n",
+       "      <td>16.4661</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.1843</td>\n",
+       "      <td>2.6812</td>\n",
+       "      <td>1.8587</td>\n",
+       "      <td>4.6929</td>\n",
+       "      <td>16.0916</td>\n",
+       "      <td>-1.5336</td>\n",
+       "      <td>-4.0958</td>\n",
+       "      <td>8.5873</td>\n",
+       "      <td>17.1516</td>\n",
+       "      <td>-22.1940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>train_19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.4090</td>\n",
+       "      <td>-0.7863</td>\n",
+       "      <td>15.1828</td>\n",
+       "      <td>8.0631</td>\n",
+       "      <td>11.2831</td>\n",
+       "      <td>-0.7356</td>\n",
+       "      <td>6.3801</td>\n",
+       "      <td>16.0218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.9745</td>\n",
+       "      <td>6.3267</td>\n",
+       "      <td>2.5156</td>\n",
+       "      <td>8.9878</td>\n",
+       "      <td>16.0550</td>\n",
+       "      <td>-2.1962</td>\n",
+       "      <td>8.3985</td>\n",
+       "      <td>9.1711</td>\n",
+       "      <td>14.7352</td>\n",
+       "      <td>3.9133</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 202 columns</p>\n",
+       "<p>20 rows × 202 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID_code  target    var_0   var_1    var_2   var_3    var_4    var_5  \\\n",
-       "0  train_0       0   8.9255 -6.7863  11.9081  5.0930  11.4607  -9.2834   \n",
-       "1  train_1       0  11.5006 -4.1473  13.8588  5.3890  12.3622   7.0433   \n",
-       "2  train_2       0   8.6093 -2.7457  12.0805  7.8928  10.5825  -9.0837   \n",
-       "3  train_3       0  11.0604 -2.1518   8.9522  7.1957  12.5846  -1.8361   \n",
-       "4  train_4       0   9.8369 -1.4834  12.8746  6.6375  12.2772   2.4486   \n",
-       "5  train_5       0  11.4763 -2.3182  12.6080  8.6264  10.9621   3.5609   \n",
-       "6  train_6       0  11.8091 -0.0832   9.3494  4.2916  11.1355  -8.0198   \n",
-       "7  train_7       0  13.5580 -7.9881  13.8776  7.5985   8.6543   0.8310   \n",
-       "8  train_8       0  16.1071  2.4426  13.9307  5.6327   8.8014   6.1630   \n",
-       "9  train_9       0  12.5088  1.9743   8.8960  5.4508  13.6043 -16.2859   \n",
+       "     ID_code  target    var_0   var_1    var_2   var_3    var_4    var_5  \\\n",
+       "0    train_0       0   8.9255 -6.7863  11.9081  5.0930  11.4607  -9.2834   \n",
+       "1    train_1       0  11.5006 -4.1473  13.8588  5.3890  12.3622   7.0433   \n",
+       "2    train_2       0   8.6093 -2.7457  12.0805  7.8928  10.5825  -9.0837   \n",
+       "3    train_3       0  11.0604 -2.1518   8.9522  7.1957  12.5846  -1.8361   \n",
+       "4    train_4       0   9.8369 -1.4834  12.8746  6.6375  12.2772   2.4486   \n",
+       "5    train_5       0  11.4763 -2.3182  12.6080  8.6264  10.9621   3.5609   \n",
+       "6    train_6       0  11.8091 -0.0832   9.3494  4.2916  11.1355  -8.0198   \n",
+       "7    train_7       0  13.5580 -7.9881  13.8776  7.5985   8.6543   0.8310   \n",
+       "8    train_8       0  16.1071  2.4426  13.9307  5.6327   8.8014   6.1630   \n",
+       "9    train_9       0  12.5088  1.9743   8.8960  5.4508  13.6043 -16.2859   \n",
+       "10  train_10       0   5.0702 -0.5447   9.5900  4.2987  12.3910 -18.8687   \n",
+       "11  train_11       0  12.7188 -7.9750  10.3757  9.0101  12.8570 -12.0852   \n",
+       "12  train_12       0   8.7671 -4.6154   9.7242  7.4242   9.0254   1.4247   \n",
+       "13  train_13       1  16.3699  1.5934  16.7395  7.3330  12.1450   5.9004   \n",
+       "14  train_14       0  13.8080  5.0514  17.2611  8.5120  12.8517  -9.1622   \n",
+       "15  train_15       0   3.9416  2.6562  13.3633  6.8895  12.2806 -16.1620   \n",
+       "16  train_16       0   5.0615  0.2689  15.1325  3.6587  13.5276  -6.5477   \n",
+       "17  train_17       0   8.4199 -1.8128   8.1202  5.3955   9.7184 -17.8390   \n",
+       "18  train_18       0   4.8750  1.2646  11.9190  8.4650  10.7203  -0.6707   \n",
+       "19  train_19       0   4.4090 -0.7863  15.1828  8.0631  11.2831  -0.7356   \n",
        "\n",
-       "    var_6    var_7  ...  var_190  var_191  var_192  var_193  var_194  var_195  \\\n",
-       "0  5.1187  18.6266  ...   4.4354   3.9642   3.1364   1.6910  18.5227  -2.3978   \n",
-       "1  5.6208  16.5338  ...   7.6421   7.7214   2.5837  10.9516  15.4305   2.0339   \n",
-       "2  6.9427  14.6155  ...   2.9057   9.7905   1.6704   1.6858  21.6042   3.1417   \n",
-       "3  5.8428  14.9250  ...   4.4666   4.7433   0.7178   1.4214  23.0347  -1.2706   \n",
-       "4  5.9405  19.2514  ...  -1.4905   9.5214  -0.1508   9.1942  13.2876  -1.5121   \n",
-       "5  4.5322  15.2255  ...  -6.3068   6.6025   5.2912   0.4403  14.9452   1.0314   \n",
-       "6  6.1961  12.0771  ...   8.7830   6.4521   3.5325   0.1777  18.3314   0.5845   \n",
-       "7  5.6890  22.3262  ...  13.1700   6.5491   3.9906   5.8061  23.1407  -0.3776   \n",
-       "8  4.4514  10.1854  ...   1.4298  14.7510   1.6395   1.4181  14.8370  -1.9940   \n",
-       "9  6.0637  16.8410  ...   0.5543   6.3160   1.0371   3.6885  14.8344   0.4467   \n",
+       "     var_6    var_7  ...  var_190  var_191  var_192  var_193  var_194  \\\n",
+       "0   5.1187  18.6266  ...   4.4354   3.9642   3.1364   1.6910  18.5227   \n",
+       "1   5.6208  16.5338  ...   7.6421   7.7214   2.5837  10.9516  15.4305   \n",
+       "2   6.9427  14.6155  ...   2.9057   9.7905   1.6704   1.6858  21.6042   \n",
+       "3   5.8428  14.9250  ...   4.4666   4.7433   0.7178   1.4214  23.0347   \n",
+       "4   5.9405  19.2514  ...  -1.4905   9.5214  -0.1508   9.1942  13.2876   \n",
+       "5   4.5322  15.2255  ...  -6.3068   6.6025   5.2912   0.4403  14.9452   \n",
+       "6   6.1961  12.0771  ...   8.7830   6.4521   3.5325   0.1777  18.3314   \n",
+       "7   5.6890  22.3262  ...  13.1700   6.5491   3.9906   5.8061  23.1407   \n",
+       "8   4.4514  10.1854  ...   1.4298  14.7510   1.6395   1.4181  14.8370   \n",
+       "9   6.0637  16.8410  ...   0.5543   6.3160   1.0371   3.6885  14.8344   \n",
+       "10  6.0382  14.3797  ...   7.2780   8.0819   0.2139  -0.0761  14.9585   \n",
+       "11  5.6464  11.8370  ...  -0.8901   2.6559  -0.0503   5.5946  13.6152   \n",
+       "12  6.2815  12.3143  ...   0.3782   7.4382   0.0854   1.3444  17.2439   \n",
+       "13  4.8222  20.9729  ...   7.4002   7.4031   4.3989   4.0978  17.3638   \n",
+       "14  5.7327  21.0517  ...   1.0740   8.3220   3.2619   1.6738  17.4797   \n",
+       "15  5.6979  14.4573  ...  -3.4195   0.8829  -1.9859   3.9905  22.4647   \n",
+       "16  5.2757   9.8710  ...   0.2717   7.2854   0.5670   8.1822  19.5616   \n",
+       "17  4.0959  15.2860  ...   7.4363  11.3072   3.7903   0.0290  16.2954   \n",
+       "18  5.6103  16.4661  ...   9.1843   2.6812   1.8587   4.6929  16.0916   \n",
+       "19  6.3801  16.0218  ...   5.9745   6.3267   2.5156   8.9878  16.0550   \n",
        "\n",
-       "   var_196  var_197  var_198  var_199  \n",
-       "0   7.8784   8.5635  12.7803  -1.0914  \n",
-       "1   8.1267   8.7889  18.3560   1.9518  \n",
-       "2  -6.5213   8.2675  14.7222   0.3965  \n",
-       "3  -2.9275  10.2922  17.9697  -8.9996  \n",
-       "4   3.9267   9.5031  17.9974  -8.8104  \n",
-       "5  -3.6241   9.7670  12.5809  -4.7602  \n",
-       "6   9.1104   9.1143  10.8869  -3.2097  \n",
-       "7   4.2178   9.4237   8.6624   3.4806  \n",
-       "8  -1.0733   8.1975  19.5114   4.8453  \n",
-       "9  14.1287   7.9133  16.2375  14.2514  \n",
+       "    var_195  var_196  var_197  var_198  var_199  \n",
+       "0   -2.3978   7.8784   8.5635  12.7803  -1.0914  \n",
+       "1    2.0339   8.1267   8.7889  18.3560   1.9518  \n",
+       "2    3.1417  -6.5213   8.2675  14.7222   0.3965  \n",
+       "3   -1.2706  -2.9275  10.2922  17.9697  -8.9996  \n",
+       "4   -1.5121   3.9267   9.5031  17.9974  -8.8104  \n",
+       "5    1.0314  -3.6241   9.7670  12.5809  -4.7602  \n",
+       "6    0.5845   9.1104   9.1143  10.8869  -3.2097  \n",
+       "7   -0.3776   4.2178   9.4237   8.6624   3.4806  \n",
+       "8   -1.9940  -1.0733   8.1975  19.5114   4.8453  \n",
+       "9    0.4467  14.1287   7.9133  16.2375  14.2514  \n",
+       "10  -1.2160   6.6576   9.2553  14.2914  -7.6652  \n",
+       "11   2.4058  -1.7183   9.6745  16.7498  -3.9728  \n",
+       "12  -0.0798   5.7389   8.4897  17.0938   4.6106  \n",
+       "13  -1.3022   9.6846   9.0419  15.6064 -10.8529  \n",
+       "14  -0.0257  -3.5323   9.3439  24.4479  -5.1110  \n",
+       "15   0.5129   6.5273   8.2899  12.9116  -4.9182  \n",
+       "16   0.4365  -3.4975   8.6367  20.2548  11.1524  \n",
+       "17   0.1470   8.9603   9.4560  19.4505  -5.2407  \n",
+       "18  -1.5336  -4.0958   8.5873  17.1516 -22.1940  \n",
+       "19  -2.1962   8.3985   9.1711  14.7352   3.9133  \n",
        "\n",
-       "[10 rows x 202 columns]"
+       "[20 rows x 202 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4358,7 +4628,7 @@
    "source": [
     "sub_df = pd.DataFrame({\"ID_code\":test[\"ID_code\"].values})\n",
     "sub_df[\"target\"] = predictions\n",
-    "sub_df.to_csv(\"submission.csv\", index=False)"
+    "sub_df.to_csv(\"C:/Users/Sriram Rachamadugu/Documents/GitHub/Santander-Customer-Transaction-Prediction/Data/submission.csv\", index=False)"
    ]
   },
   {
